--- a/REVISADO/12-ng-repeat-variables.html
+++ b/REVISADO/12-ng-repeat-variables.html
@@ -1,14 +1,24 @@
-<!-- File: chapter2/ng-repeat-example-1.html -->
+<!-- File: chapter2/ng-repeat-helper-variables.html -->
 <html ng-app="notesApp">
 <head><title>Notes App</title></head>
 <body ng-controller="MainCtrl as ctrl">
+
 <div ng-repeat="note in ctrl.notes">
+  <div>First Element: {{$first}}</div>
+  <div>Middle Element: {{$middle}}</div>
+  <div>Last Element: {{$last}}</div>
+  <div>Index of Element: {{$index}}</div>
+  <div>At Even Position: {{$even}}</div>
+  <div>At Odd Position: {{$odd}}</div>
   <span class="label"> {{note.label}}</span>
   <span class="status" ng-bind="note.done"></span>
+  <br/><br/>
 </div>
+
 <script
   src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.js">
 </script>
+
 <script type="text/javascript">
   angular.module('notesApp', [])
     .controller('MainCtrl', [function () {
@@ -20,6 +30,10 @@
         {id: 4, label: 'Last Note', done: false}
       ];
     }]);
+
+// estas variables tambien pueden usarse sobre un objeto, pero antes de
+// aplicarlas ng-repeat ordena las propiedades alfabeticamente
 </script>
+
 </body>
 </html>
