--- a/REVISADO/01-modulo-simple.html
+++ b/REVISADO/01-modulo-simple.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html>
 <html ng-app>
 <body>
-<h1>Hello {{1 + 2}}</h1>
+<h1>Hello {{1 + 2}}</h1>  <!--Muestra, Hello 3-->
+
 <script
   src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.js">
 </script>
+
 </body>
 </html>
