--- a/REVISADO/06-controlador-bindeo-funciones.html
+++ b/REVISADO/06-controlador-bindeo-funciones.html
@@ -1,21 +1,28 @@
-<!-- File: chapter2/hello-controller.html -->
-<!doctype html>
+<!-- File: chapter2/controller-click-message.html -->
 <html ng-app="notesApp">
 <head><title>Notes App</title></head>
+
 <body ng-controller="MainCtrl as ctrl">
-{{ctrl.helloMsg}} AngularJS.
-<br/>
-{{ctrl.goodbyeMsg}} AngularJS
+{{ctrl.message}} AngularJS.
+
+<button ng-click="ctrl.changeMessage()">
+  Change Message
+</button>
+
 <script
   src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.js">
 </script>
+
 <script type="text/javascript">
   angular.module('notesApp', [])
     .controller('MainCtrl', [function () {
-      var ctrl = this;
-      this.helloMsg  = 'Hello ';
-      ctrl.goodbyeMsg = 'Goodbye ';
+      var ctrl           = this;
+      ctrl.message       = 'Hello ';
+      ctrl.changeMessage = function () {
+        ctrl.message = 'Goodbye';
+      };
     }]);
 </script>
+
 </body>
 </html>
