--- a/REVISADO/14-formularios/01-ng-model.html
+++ b/REVISADO/14-formularios/01-ng-model.html
@@ -1,23 +1,21 @@
-<!-- File: chapter2/controller-click-message.html -->
+<!-- File: chapter4/simple-ng-model.html -->
 <html ng-app="notesApp">
 <head><title>Notes App</title></head>
 <body ng-controller="MainCtrl as ctrl">
-{{ctrl.message}} AngularJS.
-<button ng-click="ctrl.changeMessage()">
-  Change Message
-</button>
+
+<input type="text" ng-model="ctrl.username"/>
+You typed {{ctrl.username}}
+
 <script
   src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.js">
 </script>
+
 <script type="text/javascript">
   angular.module('notesApp', [])
     .controller('MainCtrl', [function () {
-      var ctrl           = this;
-      ctrl.message       = 'Hello ';
-      ctrl.changeMessage = function () {
-        ctrl.message = 'Goodbye';
-      };
+      this.username = 'nothing';
     }]);
 </script>
+
 </body>
 </html>
