--- a/REVISADO/14-formularios/04-radioButtons.html
+++ b/REVISADO/14-formularios/04-radioButtons.html
@@ -4,27 +4,9 @@
   <meta charset="UTF-8">
   <title>Document</title>
 </head>
-<body>
+<body ng-app>
 
 <div ng-init="user = {gender: 'female'}">
-  <input type="radio"
-         name="gender"
-         ng-model="user.gender"
-         value="male">
-  <input type="radio"
-         name="gender"
-         ng-model="user.gender"
-         value="female">
-  <!--
-    Observa que los radio button tienen el mismo nombre
-    el atributo value es que el tendrán cuando sean seleccionados
-    con ng-init seleccionamos por defecto uno de los radio button asignandole a
-    user.gender el valor female
-  -->
-</div>
-
-
-<div ng-init="otherGender = 'other'">
   <input type="radio"
          name="gender"
          ng-model="user.gender"
@@ -33,13 +15,33 @@
          name="gender"
          ng-model="user.gender"
          value="female">Female
+  <!--
+    Observa que los radio button tienen el mismo nombre
+    el atributo value es que el tendrán cuando sean seleccionados
+    con ng-init seleccionamos por defecto uno de los radio button asignandole a
+    user.gender el valor female
+  -->
+</div>
+
+<div ng-init="otherGender = 'Other'">
   <input type="radio"
-         name="gender"
+         name="gender2"
+         ng-model="user.gender"
+         value="male">Male
+  <input type="radio"
+         name="gender2"
+         ng-model="user.gender"
+         value="female">Female
+  <input type="radio"
+         name="gender2"
          ng-model="user.gender"
          ng-value="otherGender">{{otherGender}}
   <!-- Ejemplo de radio buttons dinamicos -->
 </div>
 
+<script
+  src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.js">
+</script>
 
 </body>
 </html>
