Completada la revision de los Filters

--- a/REVISADO/08-Filters/03-filter-arrays.html
+++ b/REVISADO/08-Filters/03-filter-arrays.html
@@ -28,7 +28,7 @@
         devuelve false, no pasará el filtro.
 -->
 
-<!-- File: chapter8/filter-arrays.html -->
+<!-- File: filter-arrays.html -->
 <html>
 <head>
   <title>Filters in Action</title>
