--- a/REVISADO/10-Directives/06-transclusion/01-no-transclusion/index.html
+++ b/REVISADO/10-Directives/06-transclusion/01-no-transclusion/index.html
@@ -1,3 +1,4 @@
+<!--File: index.html-->
 <html>
 <head>
   <title>Stock Market App</title>
@@ -8,7 +9,7 @@
   <h3>List of Stocks</h3>
   <div ng-repeat="s in mainCtrl.stocks">
     <div stock-widget stock-data="s">
-      Recommended Stock : {{s.name}}
+      This content will be blown away
     </div>
   </div>
 </div>
