--- a/REVISADO/10-Directives/06-transclusion/01-no-transclusion/stock.html
+++ b/REVISADO/10-Directives/06-transclusion/01-no-transclusion/stock.html
@@ -1,10 +1,14 @@
+<!-- File: stock.html -->
 <div class="stock-dash">
-  <span ng-transclude></span>
+  Name:
+<span class="stock-name"
+      ng-bind="stockData.name">
+</span>
   Price:
 <span class="stock-price"
       ng-bind="stockData.price | currency">
 </span>
-  Percentage Change:
+  Percentage Change
 <span class="stock-change"
       ng-bind="getChange(stockData) + '%'">
 </span>
