Mas ejemplos de los atributos de directivas, transclude y controller

--- a/10-Directives/13-examples/06-scope-object/index.html
+++ b/10-Directives/13-examples/06-scope-object/index.html
@@ -22,8 +22,7 @@
     bidideep="variable"
     bidideep2="myCtrl.bidideep2"
     bidishallow="myCtrl.bidishallow"
-    bidishallow2="myCtrl.bidishallow2"
-    functionwithcontext="myCtrl.method">
+    bidishallow2="myCtrl.bidishallow2">
 </my-prueba2>
 
 <br><br><br>
